--- a/start.html/1.html/basic.html
+++ b/start.html/1.html/basic.html
@@ -154,7 +154,7 @@
    <div class="nav-item">
     
     <a class="b" href="">Home</a>
-    <a class="b" href="">Pay&ment</a>
+    <a class="b" href="">online</a>
     <a class="b" href="">Projects</a>
     <a class="b" href="">About Me</a>
    </div>
