--- a/start.html/1.html/use.html
+++ b/start.html/1.html/use.html
@@ -155,7 +155,7 @@
         }
       
     }
-    @media screen (max-width: 1024px ) {
+    @media screen and (max-width: 1024px ) {
       
     }
     .holder{
