--- a/start.html/1.html/ass4.html
+++ b/start.html/1.html/ass4.html
@@ -33,6 +33,7 @@
         .nav-list {
             list-style: none;
             display: flex;
+            position: absolute;
             gap: 3rem;
             position: fixed;
             justify-content: center;
