--- a/Desktop/images/my.portfolios/index.html/index1.html
+++ b/Desktop/images/my.portfolios/index.html/index1.html
@@ -59,5 +59,9 @@
             </button>
         </div>
     </nav>
+    
+    <!-- Calculator will appear here -->
+    <div id="calculator-container"></div>
+    
 </body>
 </html>
