--- a/Desktop/images/images/javascript/.html
+++ b/Desktop/images/images/javascript/.html
@@ -1,125 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Glassy Navbar with JS</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To-Do List with Remove</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #000;
-      color: white;
-      transition: background 0.3s, color 0.3s;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      padding: 20px;
     }
-
-    .navbar {
-      margin: 30px auto;
+    .task {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      gap: 40px;
-      padding: 10px 30px;
-      width: fit-content;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 40px;
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+      background: white;
+      padding: 8px;
+      margin-bottom: 5px;
+      border-radius: 4px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
-
-    .navbar a {
-      text-decoration: none;
+    button {
+      background: red;
       color: white;
-      font-size: 18px;
-      position: relative;
-      padding: 6px 12px;
-    }
-
-    .navbar a:hover,
-    .navbar a.active {
-      color: #00ffff;
-    }
-
-    .icon {
-      width: 35px;
-      height: 35px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
+      border: none;
+      padding: 5px 10px;
       cursor: pointer;
+      border-radius: 3px;
     }
-
-    .icon:hover {
-      background: rgba(255, 255, 255, 0.2);
-    }
-
-    .light-mode {
-      background: #f2f2f2;
-      color: #000;
-    }
-
-    .light-mode .navbar {
-      background: rgba(0, 0, 0, 0.05);
-      border-color: rgba(0, 0, 0, 0.1);
-    }
-
-    .light-mode .navbar a {
-      color: black;
-    }
-
-    .light-mode .navbar a.active {
-      color: #0077ff;
-    }
-
-    .light-mode .icon {
-      background: rgba(187, 174, 174, 0.689);
-      color: black;
-    }
-
-    h1 {
-      text-align: center;
-      margin-top: 50px;
+    button:hover {
+      background: darkred;
     }
   </style>
 </head>
 <body>
 
-  <div class="navbar">
-    <div class="icon" id="homeBtn" title="Home"><i class="fas fa-broadcast-tower"></i></div>
-    <a href="#work" class="nav-link">Work</a>
-    <a href="#about" class="nav-link">About</a>
-    <a href="#play" class="nav-link">Play</a>
-    <div class="icon" id="themeToggle" title="Toggle Theme"><i class="far fa-circle"></i></div>
-  </div>
+  <h2>To-Do List</h2>
+  <input type="text" id="display" placeholder="Enter task">
+  <button onclick="inputhere()">Add Task</button>
 
-  <h1 id="mainHeading">William Le</h1>
+  <div class="divo"></div>
 
   <script>
-    // Highlight active nav link
-    const navLinks = document.querySelectorAll('.nav-link');
-    navLinks.forEach(link => {
-      link.addEventListener('click', function () {
-        navLinks.forEach(l => l.classList.remove('active'));
-        this.classList.add('active');
-        alert("You clicked: " + this.textContent); // for demo
-      });
-    });
+    function inputhere() {
+      const taskValue = document.getElementById("display").value;
+      
 
-    // Home button click
-    document.getElementById('homeBtn').addEventListener('click', () => {
-      alert("Going Home (You can scroll or redirect)");
-    });
+      const taskDiv = document.createElement("div");
+      taskDiv.classList.add("task");
 
-    // Theme toggle
-    document.getElementById('themeToggle').addEventListener('click', () => {
-      document.body.classList.toggle('light-mode');
-    });
+      const taskText = document.createElement("span");
+      taskText.textContent = taskValue;
+
+      const removeBtn = document.createElement("button");
+      removeBtn.textContent = "Remove";
+      removeBtn.onclick = function () {
+        taskDiv.remove();
+      };
+
+      taskDiv.appendChild(taskText);
+      taskDiv.appendChild(removeBtn);
+
+      document.querySelector(".divo").appendChild(taskDiv);
+
+      document.getElementById("display").value = ""; // Clear input
+    }
   </script>
 
 </body>
