--- a/Desktop/images/my.portfolios/index.html/index1.html
+++ b/Desktop/images/my.portfolios/index.html/index1.html
@@ -17,10 +17,10 @@
                     <a href="#home" class="nav-item button-label">Home</a>
                 </li>
                 <li class="hover-underline-animation1">
-                    <a href="#projects" class="nav-item button-label">Projects</a>
+                    <a href="#projects" class="nav-item button-label">About</a>
                 </li>
                 <li class="hover-underline-animation2">
-                    <a href="#skills" class="nav-item button-label">Skills</a>
+                    <a href="#skills" class="nav-item button-label">Projects </a>
                 </li>
             </ul>
             <a href="#" class="new" style="border: none; text-decoration: none;">
