--- a/Desktop/images/my.portfolios/index.html/index1.html
+++ b/Desktop/images/my.portfolios/index.html/index1.html
@@ -155,11 +155,12 @@
         
     </div>
 </div>
+</div>
 
 <div >
     <div class="about-container">
         <div class="about-header">
-            <h1 class="about-title"></h1>
+            <h1 class="about-title">ABOUT ME</h1>
         </div>
     <div class="#about">
         <h1 class="about-title"></h1>
@@ -168,8 +169,6 @@
     </div>
     </div>
 </div>
-</div>
-
 
     
 </body>
