--- a/Desktop/images/my.portfolios/index.html/del.html
+++ b/Desktop/images/my.portfolios/index.html/del.html
@@ -1,120 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Expense Tracker</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To-Do List</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .todo-container {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+      width: 300px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+
+    input {
+      width: 70%;
+      padding: 8px;
+      margin-right: 5px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button {
+      padding: 8px 12px;
+      background: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #218838;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin-top: 15px;
+    }
+
+    li {
+      background: #f1f1f1;
+      padding: 10px;
+      margin-bottom: 8px;
+      border-radius: 5px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    li.completed {
+      text-decoration: line-through;
+      color: gray;
+    }
+
+    .delete-btn {
+      background: red;
+      padding: 5px 8px;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .delete-btn:hover {
+      background: darkred;
+    }
+  </style>
 </head>
 <body>
-
-<div class="container">
-  <h1>💰 Expense Tracker</h1>
-
-  <div class="balance">
-    <h2>Balance: ₹<span id="balance">0</span></h2>
-    <div class="summary">
-      <p>Income: ₹<span id="income">0</span></p>
-      <p>Expense: ₹<span id="expense">0</span></p>
-    </div>
+  <div class="todo-container">
+    <h2>My To-Do List</h2>
+    <input type="text" id="taskInput" placeholder="Enter a task">
+    <button onclick="addTask()">Add</button>
+    <ul id="taskList"></ul>
   </div>
 
-  <form id="transaction-form">
-    <input type="text" id="text" placeholder="Enter text" required>
-    <input type="number" id="amount" placeholder="Enter amount (positive for income, negative for expense)" required>
-    <button type="submit">Add Transaction</button>
-  </form>
+  <script>
+    const taskInput = document.getElementById("taskInput");
+    const taskList = document.getElementById("taskList");
 
-  <ul id="transactions"></ul>
+    function addTask() {
+      let taskText = taskInput.value.trim();
+      if (taskText === "") return; // do not add empty tasks
 
-  <canvas id="chart" width="400" height="200"></canvas>
-</div>
+      let li = document.createElement("li");
+      li.textContent = taskText;
 
-<script src="1.js"></script>
+      // mark as completed on click
+      li.addEventListener("click", function() {
+        li.classList.toggle("completed");      
+      });
 
-<style>
-    body {
-  font-family: Arial, sans-serif;
-  background: #222;
-  color: white;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-}
+      // delete button
+      let delBtn = document.createElement("button");
+      delBtn.textContent = "X";
+      delBtn.onclick = function() {
+        li.remove();
+      };
 
-.container {
-  max-width: 500px;
-  width: 100%;
-  background: #333;
-  padding: 20px;
-  border-radius: 10px;
-}
+      li.appendChild(delBtn);
+      taskList.appendChild(li);a
 
-h1 {
-  text-align: center;
-}
-
-.balance {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.summary {
-  display: flex;
-  justify-content: space-around;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-input, button {
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-}
-
-input {
-  background: #444;
-  color: white;
-}
-
-button {
-  background: #28a745;
-  color: white;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #218838;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-li {
-  background: #444;
-  margin: 5px 0;
-  padding: 10px;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.income {
-  color: lightgreen;
-}
-
-.expense {
-  color: red;
-}
-
-
-</style>
+      taskInput.value = ""; // clear input
+    }
+  </script>
 </body>
 </html>
